--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -13,3 +13,5 @@ $smallMobileUp: "min-width: 480px";
 $smallMobile_PT: "max-width: 320px";
 $smallMobile_PT_up: "min-width: 320px";
 $smallMobile_LS_up: "min-width: 480px";
+
+$icon-font-path: '../static/fonts/';
