--- a/src/stylesheets/routes/_home.scss
+++ b/src/stylesheets/routes/_home.scss
@@ -1,5 +1,7 @@
 .HomePage {
-	background-color: #deedf7;
 	width: 100%;
-	min-height:100px;
+}
+.HomePage-content {
+	margin: 0 auto;
+	width: 80%;
 }
