--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,8 +1,15 @@
 @import '../../node_modules/normalize.css/normalize.css';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables';
 @import 'base/variables';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/buttons';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/forms';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/type';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/panels';
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons';
+
 @import 'routes/_home.scss';
 @import 'components/_header.scss';
-
-.wrapper {
-	background-color: #00d5e4;
-}
+@import 'components/_todo.scss';
